fix: coversation section animation with framer motion, fix: emoji pop up positioning on mobile devices

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -85,6 +85,11 @@
     height: 100vh;
     overflow: hidden;
   }
+  em-emoji-picker {
+    background-color: #1e293b !important;
+    width: 100%;
+    margin-top: 0.5rem;
+  }
 }
 
 @layer components {
